Fix options overflow in mobile view

--- a/src/styles/ComponentCatalogPanel.scss
+++ b/src/styles/ComponentCatalogPanel.scss
@@ -67,5 +67,9 @@ $hero-section-max-width: 848px;
       flex-flow: column nowrap;
       max-height: none;
     }
+
+    .hero-options {
+      max-height: none;
+    }
   }
 }
